# Shadow

./: .eslintrc.json  .gitignore  README.md  TASKS.md  jest.config.base.js  jest.config.js  package.json  pnpm-lock.yaml  setup.sh  tsconfig.base.json
.github/workflows/: main.yml
apps/web/: jest.config.js  jest.setup.js  package.json  tailwind.config.ts  tsconfig.json
docs/: architecture.md  environment.md  feature-mapping.md  features.md  jules_review.md  master-integration-plan.md
docs/api/: openapi.yaml
docs/ops/: ats-ai-runbook.md  exporter-runbook.md  parser-runbook.md  portfolio-runbook.md  search-runbook.md  skills-runbook.md  vc-runbook.md
docs/playbooks/: 01-foundation-setup.md  02-core-schema-package.md  03-shared-ui-package.md  04-nextjs-web-app-setup.md  05-parser-service.md  06-ats-ai-service.md  07-exporter-service.md  08-skills-service.md  09-search-service.md  10-vc-service.md  (+5 more)
services/ats/: .gitignore  README.md  install_docx_deps.py  pyproject.toml  requirements.txt  setup.sh  test_docx_dependencies.py
services/ats/app/: base.py  main.py
services/ats/app/api/router/v1/: job.py  resume.py
services/ats/app/core/: config.py
services/ats/ats_service/: base.py
services/ats/ats_service/api/api/router/v1/: job.py  resume.py
services/ats/ats_service/api/router/: health.py
services/ats/ats_service/api/router/v1/: __init__.py  parser.py
services/ats/ats_service/core/: __init__.py
services/ats/ats_service/services/: __init__.py  resume_service.py
services/ats/ats_service/services/services/: job_service.py  resume_service.py
(+146 files in other folders)
