[tool.poetry]
name = "ats-service"
version = "0.1.0"
description = "A microservice for parsing and analyzing resumes."
authors = ["Jules"]
packages = [{include = "ats_service"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"